erDiagram
  CLIENT ||--o{ INSPECTION_SITE : has
  INSPECTION_SITE ||--o{ EQUIPMENT : contains

  CLIENT ||--o{ INSPECTION : relates_to
  INSPECTION_SITE ||--o{ INSPECTION : occurs_at
  EQUIPMENT ||--o{ INSPECTION : targets

  USER ||--o{ INSPECTION : creates
  USER ||--o{ INSPECTION : assigned_technician
  USER ||--o{ INSPECTION : assigned_supervisor

  INSPECTION_TEMPLATE ||--o{ INSPECTION_TEMPLATE_VERSION : versions
  INSPECTION_TEMPLATE_VERSION ||--o{ TEMPLATE_SECTION : contains
  TEMPLATE_SECTION ||--o{ TEMPLATE_ITEM : contains
  INSPECTION_TEMPLATE_VERSION ||--o{ INSPECTION : base_for

  INSPECTION ||--o{ INSPECTION_ITEM_SNAPSHOT : snapshots
  INSPECTION_ITEM_SNAPSHOT ||--o| INSPECTION_RESPONSE : answers
  INSPECTION ||--o{ INSPECTION_RESPONSE : contains

  INSPECTION ||--o{ EVIDENCE : attached_to
  INSPECTION_RESPONSE ||--o{ EVIDENCE : documents
  NON_CONFORMITY ||--o{ EVIDENCE : proves

  INSPECTION ||--o{ NON_CONFORMITY : reports
  INSPECTION_RESPONSE ||--o{ NON_CONFORMITY : generates

  INSPECTION ||--o{ INSPECTION_REVIEW : reviewed_by
  USER ||--o{ INSPECTION_REVIEW : reviews

  INSPECTION ||--o{ AUDIT_EVENT : records
  USER ||--o{ AUDIT_EVENT : acts

  CLIENT {
    uuid id PK
    string name
    string legal_name
    string document
    string email
    string phone
    string status
    timestamptz created_at
    timestamptz updated_at
    int version
  }

  INSPECTION_SITE {
    uuid id PK
    uuid client_id FK
    string name
    string description
    string address_line
    string city
    string state
    string postal_code
    string contact_name
    string status
    timestamptz created_at
    timestamptz updated_at
    int version
  }

  EQUIPMENT {
    uuid id PK
    uuid site_id FK
    string name
    string asset_number
    string serial_number
    string manufacturer
    string model
    string type
    string qr_code UK
    string status
    date installed_at
    timestamptz created_at
    timestamptz updated_at
    int version
  }

  USER {
    uuid id PK
    string name
    string email UK
    string password_hash
    string role
    string status
    string phone
    timestamptz created_at
    timestamptz updated_at
    int version
  }

  INSPECTION_TEMPLATE {
    uuid id PK
    string title
    string category
    string status
    int current_version
    uuid created_by FK
    timestamptz created_at
    timestamptz updated_at
    int version
  }

  INSPECTION_TEMPLATE_VERSION {
    uuid id PK
    uuid template_id FK
    int version_number
    string title_snapshot
    string description_snapshot
    uuid published_by FK
    timestamptz published_at
    boolean active_for_new_inspections
  }

  TEMPLATE_SECTION {
    uuid id PK
    uuid template_version_id FK
    string title
    int display_order
  }

  TEMPLATE_ITEM {
    uuid id PK
    uuid section_id FK
    string code
    string title
    string response_type
    boolean required
    boolean observation_required_on_failure
    boolean evidence_required_on_failure
    jsonb options_json
    int display_order
  }

  INSPECTION {
    uuid id PK
    uuid template_version_id FK
    uuid client_id FK
    uuid site_id FK
    uuid equipment_id FK
    uuid technician_id FK
    uuid supervisor_id FK
    string title
    string priority
    string status
    timestamptz scheduled_for
    timestamptz started_at_device
    timestamptz completed_at_device
    timestamptz submitted_at_server
    int version
  }

  INSPECTION_ITEM_SNAPSHOT {
    uuid id PK
    uuid inspection_id FK
    string section_title
    string item_title
    string response_type
    boolean required
    jsonb rules_json
    int item_order
  }

  INSPECTION_RESPONSE {
    uuid id PK
    uuid inspection_id FK
    uuid inspection_item_id FK
    string value_text
    numeric value_number
    boolean value_boolean
    date value_date
    jsonb value_json
    string observation
    string conformity
    uuid answered_by FK
    int version
  }

  NON_CONFORMITY {
    uuid id PK
    uuid inspection_id FK
    uuid inspection_item_id FK
    uuid response_id FK
    string title
    string description
    string severity
    string status
    uuid created_by FK
    int version
  }

  EVIDENCE {
    uuid id PK
    uuid inspection_id FK
    uuid response_id FK
    uuid non_conformity_id FK
    string type
    string storage_key
    string mime_type
    bigint size_bytes
  }

  INSPECTION_REVIEW {
    uuid id PK
    uuid inspection_id FK
    uuid reviewer_id FK
    string decision
    string reason
    string comments
    int review_cycle
  }

  AUDIT_EVENT {
    uuid id PK
    uuid inspection_id FK
    uuid actor_id FK
    string action
    string entity_type
    uuid entity_id
    timestamptz occurred_at
  }
